welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:3: error: not found: value temps
		if ( temps >=60 && temps <= 100 ) {
                     ^squirrelPlay:8: error: not found: value temps
		if ( temps >=60 && temps <= 90 ) {
                     ^