welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
	if (isSummer) {
		if ( temps >=60 && temps <= 100 ) {
			return true
		} else return false
	}
	else {
		if ( temps >=60 && temps <= 90 ) {
			return true
		} else return false
	}
}
